<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPageFragment"
    android:background="@color/black"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/main_background"
        style="@style/backGroundImage"
        android:contentDescription="@string/main_background_for_visual_novel"
        android:src="@drawable/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/big_text"
        android:text="@string/thanksForPlaying"
        style="@style/bigText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/darkButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="183dp"
        android:layout_marginBottom="216dp"
        android:text="@string/tryAgain"
        app:layout_constraintBottom_toBottomOf="@+id/main_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_text" />

</androidx.constraintlayout.widget.ConstraintLayout>